--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">singMeToo</string>
+    <string name="get_started_text">\"Sing with us\"</string>
+    <string name="app_moto_text">Bang That Beat</string>
+    <string name="skip_text">Skip</string>
 </resources>
