--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="menu_item_other">Other</string>
     <string name="menu_item_login">Login</string>
     <string name="menu_item_logout">Logout</string>
+    <string name="home_item_recents_title">Recents</string>
+    <string name="home_item_music_title">Music</string>
+    <string name="home_item_playlists_title">Playlists</string>
+    <string name="home_item_radio_title">Radio</string>
 </resources>
