--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="get_started_text">\"Sing with us\"</string>
     <string name="app_moto_text">Bang That Beat</string>
     <string name="skip_text">Skip</string>
+    <string name="home_toolbar_title">Home</string>
+    <string name="music_library_toolbar_title">Music Library</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
