--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="skip_text">Skip</string>
     <string name="home_toolbar_title">Home</string>
     <string name="music_library_toolbar_title">Music Library</string>
+    <string name="music_library_toolbar_subtitle">Music</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
