Bottom Sheet Task

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="home_item_music_title">Music</string>
     <string name="home_item_playlists_title">Playlists</string>
     <string name="home_item_radio_title">Radio</string>
+    <string name="now_playing">Now Playing</string>
 
     //music service
     <string name="playback_channel_name">Now Playing</string>
