--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="menu_item_login">Login</string>
     <string name="menu_item_logout">Logout</string>
     <string name="home_item_music_title">Music</string>
-    <string name="home_item_about_us">About Us</string>
+    <string name="home_item_about_us">About US</string>
     <string name="now_playing">Now Playing</string>
     <string name="about_us_contact_text">Contact With Us</string>
     <string name="about_us_developer_name">Himanshu Yadav</string>
